--- a/index.html
+++ b/index.html
@@ -118,31 +118,35 @@
           </div>
         </section>
 
-        <!-- Three -->
-        <section id="three">
-          <div class="container">
-            <h3>Mon CV</h3>
-            <p>
-              Integer eu ante ornare amet commetus vestibulum blandit integer in
-              curae ac faucibus integer non. Adipiscing cubilia elementum
-              integer. Integer eu ante ornare amet commetus.
-            </p>
-            <div class="features">
-              <article>
-                <a href="#" class="image"
-                  ><img src="images/pic01.jpg" alt=""
-                /></a>
-                <div class="inner">
-                  <h4>Possibly broke spacetime</h4>
-                  <p>
-                    Integer eu ante ornare amet commetus vestibulum blandit
-                    integer in curae ac faucibus integer adipiscing ornare amet.
-                  </p>
-                </div>
-              </article>
-            </div>
-          </div>
-        </section>
+<!-- Three -->
+<section id="three">
+  <div class="container">
+    <h3>Mon CV</h3>
+    <p>
+      Vous trouverez mon CV ci-dessous. Cliquez sur le lien pour consulter le document complet en format PDF.
+    </p>
+    <div class="features">
+      <article>
+        <!-- Image d'aperçu ou illustration -->
+        <a href="cv/cv.pdf" class="image" target="_blank">
+          <img src="cv/screenshot.jpg" alt="Aperçu du CV" />
+        </a>
+        <div class="inner">
+          <h4>Consultez mon CV</h4>
+          <p>
+            Cliquez sur l'image ou le lien ci-dessous pour ouvrir mon CV en PDF dans un nouvel onglet.
+          </p>
+          <!-- Lien vers le CV en PDF -->
+          <p>
+            <a href="cv/cv.pdf" target="_blank" class="button primary">
+              Voir le CV en PDF
+            </a>
+          </p>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
 
         <!-- Four -->
         <section id="four">
