ajout page projet

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li><a href="#two">Mon travail</a></li>
           <li><a href="#three">Mon CV</a></li>
           <li><a href="#four">Contact</a></li>
+          <li><a href="#projets">Mes Projets</a></li>
         </ul>
       </nav>
       <footer>
@@ -129,7 +130,7 @@
       <article>
         <!-- Image d'aperçu ou illustration -->
         <a href="cv/cv.pdf" class="image" target="_blank">
-          <img src="cv/screenshot.jpg" alt="Aperçu du CV" />
+          <img src="cv/cv.jpg" alt="Aperçu du CV" />
         </a>
         <div class="inner">
           <h4>Consultez mon CV</h4>
@@ -140,6 +141,36 @@
           <p>
             <a href="cv/cv.pdf" target="_blank" class="button primary">
               Voir le CV en PDF
+            </a>
+          </p>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
+
+<!-- Five -->
+<section id="projets">
+  <div class="container">
+    <h3>Mes Projets</h3>
+    <p>
+      Voici une sélection de mes projets. Cliquez sur l'image pour découvrir le projet complet.
+    </p>
+    <div class="features">
+      <article>
+        <!-- Aperçu du projet en image -->
+        <a href="projet_session/projet.html" class="image" target="_blank">
+          <img src="projet_session/projet.png" alt="Aperçu du projet de session" />
+        </a>
+        <div class="inner">
+          <h4>Cours d'outils numériques (POL-6078)</h4>
+          <p>
+            Cliquez sur l'image ou sur le lien ci-dessous pour explorer le contenu de ce projet.
+          </p>
+          <!-- Lien direct vers le projet -->
+          <p>
+            <a href="projet_session/projet.html" target="_blank" class="button primary">
+              Voir le projet complet
             </a>
           </p>
         </div>
