--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
               <p>Doctorant en science politique | Université Laval</p>
             </header>
             <p>
-              Adrien Cloutier est doctorant en science politique à l'Université Laval, où il consacre ses recherches à la communication politique, à l'agenda médiatique et aux outils numériques appliqués aux sciences sociales.
+              Adrien Cloutier est doctorant en science politique à l'Université Laval, où il consacre ses recherches à la communication politique, à l'agenda médiatique et aux outils numériques interdisciplinaires.
             </p>
             <p>
-              Il est co-créateur de l'<strong>École interdisciplinaire outils & méthodes (EIOM)</strong>, une école d'été innovante qui réunit chaque année étudiants, chercheurs et praticiens autour des meilleures pratiques en recherche numérique et en analyse de données. Ancien coordonnateur du <strong>Réseau francophone international en conseil scientifique (RFICS)</strong>, il a contribué à la structuration d'initiatives reliant le monde académique et les décideurs publics.
+              Il est co-créateur de l'<strong>École interdisciplinaire outils & méthodes (EIOM)</strong>, une école d'été qui réunit chaque année étudiants, chercheurs et professionnels. Ancien coordonnateur du <strong>Réseau francophone international en conseil scientifique (RFICS)</strong>, il a contribué à la structuration d'initiatives reliant le monde académique et les décideurs publics en Amériques, en Afrique et en Europe.
             </p>
             <p>
-              Adrien est également le créateur de <strong>Radar+</strong>, une infrastructure de recherche qui collecte en continu les manchettes médiatiques et permet d'analyser la saillance des enjeux publics au Québec, au Canada et aux États-Unis. Ses travaux mettent en lumière le rôle des médias dans la formation de l'opinion publique et l'évolution des débats politiques contemporains.
+              Adrien est également le créateur de <strong>Radar+</strong>, un algorithme qui collecte en continu les Unes des grands médias pour mesurer la saillance des objets publics au Québec, au Canada et aux États-Unis. Ses travaux mettent en lumière le rôle des médias dans la formation de l'opinion publique et l'évolution des débats politiques contemporains.
             </p>
             <p>
-              Passionné par la pédagogie, il enseigne à l'Université Laval des cours sur les méthodes quantitatives et les outils numériques, où il combine rigueur scientifique et innovation pédagogique. Son expertise se situe au croisement de la recherche, de la vulgarisation et du développement d'outils numériques au service des sciences sociales.
+              Passionné par la pédagogie, il enseigne à l'Université Laval des cours sur les méthodes quantitatives et les outils numériques. Son expertise se situe au croisement de la recherche, de la vulgarisation et du développement d'outils numériques interdisciplinaires.
             </p>
           </div>
         </section>
@@ -97,17 +97,17 @@
           <div class="container">
             <h3>Projets et réalisations</h3>
             <p>
-              Mes principaux projets se situent à l'intersection de la recherche, de l'enseignement et du développement d'outils numériques pour les sciences sociales.
+              Mes principaux projets se situent à l'intersection de la recherche, de l'enseignement et du développement d'outils numériques interdisciplinaires.
             </p>
             <ul class="feature-icons">
               <li class="icon solid fa-graduation-cap">
-                <strong>EIOM</strong> - Co-créateur de l'École interdisciplinaire outils & méthodes, une école d'été dédiée aux meilleures pratiques en recherche numérique
+                <strong>EIOM</strong> - Co-créateur de l'École interdisciplinaire outils & méthodes (EIOM), une école d'été dédiée aux meilleures pratiques en recherche
               </li>
               <li class="icon solid fa-broadcast-tower">
-                <strong>Radar+</strong> - Infrastructure de recherche collectant en continu les manchettes médiatiques pour analyser la saillance des enjeux publics
+                <strong>Radar+</strong> - Algorithme collectant en continu les Unes médiatiques pour analyser la saillance des objets publics
               </li>
               <li class="icon solid fa-globe">
-                <strong>RFICS</strong> - Ancien coordonnateur du Réseau francophone international en conseil scientifique
+                <strong>RFICS</strong> - Ancien coordonnateur du Réseau francophone international en conseil scientifique (RFICS)
               </li>
               <li class="icon solid fa-chalkboard-teacher">
                 <strong>Enseignement</strong> - Cours sur les méthodes quantitatives et les outils numériques à l'Université Laval
