--- a/index_en.html
+++ b/index_en.html
@@ -465,6 +465,10 @@
               Academic project management and digital tools
             </p>
 
+            <div style="text-align: center; margin: 2rem 0 3rem 0;">
+              <img src="images/agile/Capture d'écran, le 2026-01-07 à 21.53.57.png" alt="Agile Notion" style="max-width: 100%; height: auto; border-radius: 0.5rem; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);" />
+            </div>
+
             <h4>Agile Training and Certification</h4>
 
             <p>
