--- a/index_en.html
+++ b/index_en.html
@@ -466,7 +466,7 @@
             </p>
 
             <div style="text-align: center; margin: 2rem 0 3rem 0;">
-              <img src="images/agile/Capture d'écran, le 2026-01-07 à 21.53.57.png" alt="Agile Notion" style="max-width: 100%; height: auto; border-radius: 0.5rem; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);" />
+              <img src="images/agile/Capture%20d%E2%80%99%C3%A9cran%2C%20le%202026-01-07%20%C3%A0%2021.53.57.png" alt="Agile Notion" style="max-width: 100%; height: auto; border-radius: 0.5rem; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);" />
             </div>
 
             <h4>Agile Training and Certification</h4>
